gke-gclb-grpc/grpcbin-gatewayapi-classic.yaml
# Another option using gke-l7-gxlb Gateway API for classic GCLB https://cloud.google.com/blog/products/containers-kubernetes/google-kubernetes-engine-gateway-controller-is-now-ga
# See also https://cloud.google.com/kubernetes-engine/docs/how-to/deploying-gateways
# and https://cloud.google.com/kubernetes-engine/docs/how-to/gatewayclass-capabilities
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: grpcbin-lb
  namespace: grpcbin
  annotations:
    # Assign certs via Certificate Manager https://cloud.google.com/kubernetes-engine/docs/how-to/secure-gateway#secure-using-certificate-manager
    networking.gke.io/certmap: gke-gateway-map
spec:
  gatewayClassName: gke-l7-gxlb
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    
    # Or instead of using a certmap, assign ssl certs similar to classic GCLBs https://cloud.google.com/kubernetes-engine/docs/how-to/secure-gateway#secure-using-ssl-certificate
    #tls:
    #  mode: Terminate    # Must terminate, Passthrough only supported on a few GCLB classes
    #  options: 
    #    networking.gke.io/pre-shared-certs: "test-ingress"
  #addresses:
  #- type: NamedAddress
  #  value: grpc-static-ip
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grpcbin-route
  namespace: grpcbin
spec:
  parentRefs:
  - name: grpcbin-lb
  hostnames:
  - grpc.example.com
  rules:    # More examples at https://gateway-api.sigs.k8s.io/reference/api-types/httproute/#rules

  # send /metrics requests to the http backend from prometheus metrics exporter (for testing via curl)
  - matches:
    - path:
        type: PathPrefix
        value: /metrics
    backendRefs:
    - name: grpcbin
      port: 8080

  # send everything else to the TLS enabled grpcbin backend
  - matches:
    - path:
        value: /
    backendRefs:
    - name: grpcbin
      port: 9001
